fix: removed some code smells, TODO and Entity converters